Bug 1060994 - Fix more bad implicit constructors in permission checker; r=bsmedberg